<resources>
    <string name="app_name">StarterChapter05</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Red_Fragment">Red Fragment</string>
    <string name="blue_fragment">Blue Fragment</string>
    <string name="HandsstandPushup">Handstand Pushups</string>
    <string name="advanced">Advanced</string>
    <string name="description">The handstand push-up (press-up) - also called the vertical push-up (press-up) or the inverted push-up (press-up) also called \"commandos\"- is a type of push-up exercise where the body is positioned in a handstand. To prepare the strength until one has built adequate balance.</string>
    <string name="comment">12</string>
    <string name="likes">154</string>
    <string name="users">+5</string>
    <string name="Requirements">Requirements</string>
    <string name="pushUpDescription">A push-up (or press-up if the hands are wider than shoulders placing more emphasis on the pectoral muscles) is a common calisthenics exercise beginning from the prone position, or the front leaning rest position known in the military. Push-ups are a basic exercise used in civilian athletic training or physical education and commonly in military physical training.</string>
</resources>
